# apps/api/src/users/dto/update-user.dto.ts
@@ -1,4 +1,45 @@
-import { PartialType } from '@nestjs/swagger';
+import { ApiPropertyOptional, PartialType } from '@nestjs/swagger';
 import { CreateUserDto } from './create-user.dto';
+import { IsOptional, IsString } from 'class-validator';
 
-export class UpdateUserDto extends PartialType(CreateUserDto) {}
+export class UpdateUserDto extends PartialType(CreateUserDto) {
+  @ApiPropertyOptional({
+    description: 'The name of the user',
+    example: 'John Doe',
+  })
+  @IsString()
+  @IsOptional()
+  name?: string;
+
+  @ApiPropertyOptional({
+    description: 'The job title of the user',
+    example: 'Software Engineer',
+  })
+  @IsString()
+  @IsOptional()
+  jobTitle?: string;
+
+  @ApiPropertyOptional({
+    description: 'The location of the user',
+    example: 'New York, NY',
+  })
+  @IsString()
+  @IsOptional()
+  location?: string;
+
+  @ApiPropertyOptional({
+    description: 'The company of the user',
+    example: 'Google',
+  })
+  @IsString()
+  @IsOptional()
+  company?: string;
+
+  @ApiPropertyOptional({
+    description: 'The about me of the user',
+    example: 'I am a software engineer',
+  })
+  @IsString()
+  @IsOptional()
+  aboutMe?: string;
+}
