# packages/types/src/user.ts
@@ -1,13 +1,0 @@
-export interface User {
-  id: number;
-  email: string;
-  name?: string;
-  createdAt: Date | string;
-  updatedAt: Date | string;
-  password: string;
-}
-
-export interface CreateUserDto {
-  password: string;
-  email: string;
-}
